Refactor BQL value handling and enhance planner functionality to use ID index for comparison operators
Replaced BqlValue instantiation and usage with specific value classes like StringVal and Int32Val for improved type safety and clarity. Enhanced the planner to accommodate index mappings, enabling more flexible query execution. Additionally, updated accompanying tests and documentation for consistency with the changes.